--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
   </head>
   <body>
     <div id="filter-div">
-      <button id="good-dog-filter">Filter good dogs: OFF</button>
+      <button id="good-dog-filter" data-filter="off">Filter good dogs: OFF</button>
     </div>
     <div id="dog-bar">
-
+      <!-- <span>Yo I'm a dog</span>
+      <span>Yo I'm a dog</span>
+      <span>Yo I'm a dog</span> -->
     </div>
     <div id="dog-summary-container">
       <h1>DOGGO:</h1>
